Attempting to fix close button being the wrong colour on mobile

--- a/src/styles/MobileNavigation.module.scss
+++ b/src/styles/MobileNavigation.module.scss
@@ -47,7 +47,7 @@
     color: #ffffff;
     cursor: pointer;
     margin: 0 20px 0 0;
-    z-index: 1001;
+    z-index: 1002;
 
     &.open {
         color:#ffffff;
