--- a/src/styles/SideMenu.module.scss
+++ b/src/styles/SideMenu.module.scss
@@ -11,7 +11,6 @@
     right: 0px;
     transition: transform 0.3s ease;
     transform: translateX(100%);
-    z-index: 1000;
 }
 
 .container.open {
